--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 django = "^5.1.5"
 djangorestframework = "^3.15.2"
+djangorestframework-simplejwt = "^5.4.0"
 
 
 [build-system]
