--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ python = "^3.10"
 django = "^5.1.5"
 djangorestframework = "^3.15.2"
 djangorestframework-simplejwt = "^5.4.0"
+cloudinary = "^1.42.1"
+django-cloudinary-storage = "^0.3.0"
+python-dotenv = "^1.0.1"
+pillow = "^11.1.0"
+django-cors-headers = "^4.6.0"
 
 
 [build-system]
